--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                 <img src="img/sdvx.png">
                 <div>SDVX III Season 2</div>
             </div></a>
-            <a href="sdvx4.html" class="gameicon"><div>
+			<a href="gitadora.html" class="gameicon"><div>
+                <img src="img/gitadora.png">
+                <div>Gitadora tri boost</div>
+            </div></a>          
+			<a href="sdvx4.html" class="gameicon"><div>
                 <img src="img/sdvx4.png">
                 <div>SDVX IV HEAVENLY HAVEN</div>
             </div></a>
